--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,16 @@
+sudo: required
+dist: trusty
+before_install:
+  - sudo apt-get install -qq pkg-config fuse
+  - sudo modprobe fuse
+  - sudo chmod 666 /dev/fuse
+  - sudo chown root:$USER /etc/fuse.conf
+
 language: python
 python:
   - "2.7"
+
+install:
+  - 'pip install tox'
+
+script: tox -r
